@@ -5,8 +5,7 @@ AUX 9999-gentoo-fb-path.patch 804 RMD160 4e46da3ee7b36b2f6618089c42ab06a54fc5c45
 AUX gentoo_ply.png 11884 RMD160 b6854064f2a6c94df51bcc8f0de03f2de3dde52d SHA1 93499a1bc9f655d9da6dde482125ab2595c1c0ae SHA256 9d22eaca844c18510d250db34fb689323f697b621387bbd1b5e4042c3e6e6f14
 AUX plymouth.initd 402 RMD160 12174a38b36e741c962a7e33e037bbd04f2e7d75 SHA1 d9221a1b76bcba43dd51df565715b7c9c602a91d SHA256 81fdc6838c72b0ed3874e08aefd6e77a4f735ce406452120ee1d52b3196c1db8
 DIST plymouth-0.8.3.tar.bz2 763575 RMD160 bb5c13e4eb48d8b881a4d2cc15190c377430f672 SHA1 30135d3b2db42778b32b6d2d9e7e0da90f0da599 SHA256 2e51abbc087228f7910302334755d0190fc9e923eae9992150adb0f6cccc9077
-EBUILD plymouth-0.8.3-r3.ebuild 1476 RMD160 16c046082fad2146dbcd57b106c8877cbac75598 SHA1 62f435d291bb5d35732cf3afef690ac886cc7997 SHA256 08d3b2a572bdcbca2dbfe77434f906421299c33e010759ae8a82cf65ad7ca31e
 EBUILD plymouth-0.8.3-r5.ebuild 2017 RMD160 97e529b2994e6dd89de9fbdca9df6a420a113318 SHA1 45e5eeee58927dae8416b4680bdf62eb05838791 SHA256 b7995035a268010225c42b55695a5498f75a12d06768c8e7e2b6bce0082dd041
 EBUILD plymouth-9999.ebuild 1912 RMD160 2d7745bef4af19cd138b9ba40326d37999b1b907 SHA1 765745e33445a9fa7336a9a9358adbd7e628a494 SHA256 3dd0ade04b20d180a013f661f766be344bba78dae7baa353572ec136d3553bb6
-MISC ChangeLog 2985 RMD160 d4e1c730585cd6971cba457e4da5e227326116ed SHA1 3c127658c05289ecf0cb1a5b9825c8e74de38610 SHA256 4ae2c221c8bec617a2f7f4c8c48474e3381a25c8addd98de7029675c0b894f83
+MISC ChangeLog 3118 RMD160 c5635bef9a9708c04dd63fa882b7b990ffd00bde SHA1 0556b4a403175fabf07a48d38c2907af4ad97b30 SHA256 5a7e981a47bbe7c20da8df82a21a20c7e8831eb6aa6660310b8622f1ecd50b1f
 MISC metadata.xml 1051 RMD160 97214658a47faf8fc63e38b4d423979345dd281e SHA1 84c1722a770c01066f78e45b07d46af9f36cb65e SHA256 3d7d850b76cdb158d1a5ed6385a8c0771687d10ba50401e4dce4906a3b96ed16
