@@ -2,10 +2,14 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
+  -plymouth-0.8.3-r3.ebuild:
+  Removed obsolete revision.
+
 *plymouth-0.8.3-r5 (04 Feb 2011)
 
-  04 Feb 2011; aidecoe <aidecoe@gentoo.org> -plymouth-0.8.3-r4.ebuild,
-  +plymouth-0.8.3-r5.ebuild:
+  04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
+  -plymouth-0.8.3-r4.ebuild, +plymouth-0.8.3-r5.ebuild:
   Revision bump related to missing dracut dependency.
 
   04 Feb 2011; Amadeusz Żołnowski <aidecoe@aidecoe.name>
